[tool.poetry]
name = "mir_vracha"
version = "0.1.0"
description = ""
authors = ["Valeriia Bortnikova"]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^6.2.5"
requests = "^2.26.0"
Faker = "^9.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
